--- a/css/style.css
+++ b/css/style.css
@@ -85,11 +85,11 @@
 .rule-l-player, .rule-l-volume{   
     height: 3px;
     background-color: var(--grey-color);
-    margin: 0.5rem 1.5rem;
+    margin: 0.5rem;
 }
 
 .rule-l-player{
-    width: 500px;
+    width: 30vw;
 }
 
 .rule-l-volume{
@@ -115,7 +115,7 @@
 }
 
 .command-player i{
-    padding: 0 0.5rem;
+    padding: 0 0.3rem;
     font-size: 13px;
 }
 
@@ -125,4 +125,9 @@
     border-radius: 50%;
 }
 
-
+/*==MEDIA QUERY==*/
+@media screen and (max-width: 768px) {
+    .recent-play .container-cards .card{
+        width: calc(100% / 4);
+    }
+}    
