--- a/css/layout.css
+++ b/css/layout.css
@@ -72,9 +72,14 @@ a{
 }
 
 .link-nav, .user-nav{
+    width: 100%;
     padding: 0 1rem;
     margin-right: 5rem;
 } 
+
+#img-logo{
+    width: 50%;
+}
 
 .user-nav{
     margin-right: 0;
@@ -140,6 +145,7 @@ a{
 }
 
 .card{
+    font-size: 14px;
     text-align: center;
     padding: 1rem 0.5rem;
     width: calc(100% / 6);
