--- a/css/layout.css
+++ b/css/layout.css
@@ -74,7 +74,6 @@ a{
 .link-nav, .user-nav{
     width: 100%;
     padding: 0 1rem;
-    margin-right: 5rem;
 } 
 
 #img-logo{
@@ -83,6 +82,7 @@ a{
 
 .user-nav{
     margin-right: 0;
+    height: 70px;
 }
 
 .link-nav h3, .link-nav div, .link-nav ul, .link-nav #playlist-name li, .user-nav div, .user-nav p, .nav img{
@@ -90,6 +90,10 @@ a{
     font-size: 15px;
 }
 
+.link-nav #playlist-name{
+    height: calc(50vh - 100px);
+    overflow: auto;
+}
 
 /*===SECTION CONTENTS===*/
 .contents{
@@ -120,7 +124,7 @@ a{
 
 /*==SECTION CATEGORIES==*/ 
 .categories ul li{
-    padding: 1rem;
+    padding: 0.5rem;
     font-size: 13px;
     font-weight: bold;
 }
